# hyper_router

./: Cargo.toml  flake.nix
simple_example/: Cargo.toml  route.yml
simple_example/src/: controller.rs  main.rs
src/: config.rs  entry_config.rs  lib.rs  paths.rs  route.rs
tests/: simple_routing.rs  simple_routing.yml  test.rs
