[package]
name = "hyper_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
hyper = { version = "1.3.1", features = ["http1"] }
proc-macro2 = "1.0.80"
quote = "1.0.36"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
syn = { version = "2.0.59", features = ["extra-traits"] }

[dev-dependencies]
body = "0.1.1"
http-body-util = "0.1"
hyper-util = { version = "0.1.3", features = ["tokio", "server"] }
serde_qs = "0.13.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
