[package]
name = "hyper_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
hyper = { version = "1.5.1", features = ["http1"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = { version = "1.0.215", features = ["derive"] }
serde_yml = "0.0.12"
syn = { version = "2.0.89", features = ["extra-traits"] }

[dev-dependencies]
body = "0.1.1"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["tokio", "server"] }
serde_qs = "0.13.0"
tokio = { version = "1.41.1", features = ["rt", "macros"] }
