[package]
name = "hyper_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
hyper = { version = "1.7.0", features = ["http1"] }
proc-macro2 = "1.0.101"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
syn = { version = "2.0.106", features = ["extra-traits"] }

[dev-dependencies]
http-body-util = "0.1.3"
hyper-util = { version = "0.1.10", features = ["tokio", "server"] }
serde_qs = "0.15.0"
tokio = { version = "1.47.1", features = ["rt", "macros"] }
