[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1"
hyper = { version = "1.5.1", features = ["http1", "server"] }
hyper_router = { path = ".." }
hyper-util = { version = "0.1.10", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_qs = "0.13.0"
tokio = { version = "1.41.1", features = ["full"] }
